[gd_scene load_steps=8 format=2]

[ext_resource path="res://media/dew/dew01.png" type="Texture" id=1]
[ext_resource path="res://prefab/dialog03.tscn" type="PackedScene" id=2]
[ext_resource path="res://media/boss_fight/health_increase.wav" type="AudioStream" id=3]
[ext_resource path="res://prefab/curtain.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefab/yggdrasil.tscn" type="PackedScene" id=5]
[ext_resource path="res://script/true_end.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "boss_shake"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1008, 416 ), Vector2( 1014, 416 ), Vector2( 1008, 416 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.756863, 0.956863, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.756863, 0.956863, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="true_end" type="Node2D"]
script = ExtResource( 6 )

[node name="yggdrasil" parent="." instance=ExtResource( 5 )]
position = Vector2( 1008, 416 )
scale = Vector2( 1.2, 1.2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="yggdrasil"]
stream = ExtResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="yggdrasil"]
anims/boss_shake = SubResource( 1 )

[node name="dew01" type="Sprite" parent="."]
position = Vector2( 272, 576 )
scale = Vector2( 0.723256, 0.723256 )
texture = ExtResource( 1 )
hframes = 2

[node name="textPolygon" parent="." instance=ExtResource( 2 )]

[node name="curtain" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = -6.10352e-05
[connection signal="disappear" from="yggdrasil" to="." method="_on_yggdrasil_disappear"]
[connection signal="animation_finish" from="curtain" to="." method="_on_curtain_animation_finish"]
